--- a/students/locale/uk/LC_MESSAGES/djangojs.po
+++ b/students/locale/uk/LC_MESSAGES/djangojs.po
@@ -28,5 +28,5 @@ msgid "Bad request"
 msgstr "Невірний запит"
 
 #: static/js/main.js:82
-msgid "Цей об'єкт більше не існує."
-msgstr ""
+msgid "This object no longer exist."
+msgstr "Цей об'єкт більше не існує."
