--- a/students/locale/uk/LC_MESSAGES/django.po
+++ b/students/locale/uk/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-11-11 08:44+0000\n"
+"POT-Creation-Date: 2016-11-11 20:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -205,14 +205,26 @@ msgid "Contact"
 msgstr "Контакт"
 
 #: templates/students/base.html:199
+#, fuzzy
+#| msgid ""
+#| "\n"
+#| "                        <a href=\"https://pydev777.github.io/\" target="
+#| "\"_blank\" title=\"My Promo Page\">Bilous Vitalii</a>\n"
+#| "                        in practical\n"
+#| "                        <a href=\"http://www.vitaliypodoba.com/books/"
+#| "django-for-beginners/\" target=\"_blank\" >course</a>\n"
+#| "                        from\n"
+#| "                        <a href=\"http://www.vitaliypodoba.com/\" target="
+#| "\"_blank\">Vitalii Podoba </a>\n"
+#| "                    "
 msgid ""
 "\n"
 "                        <a href=\"https://pydev777.github.io/\" target="
-"\"_blank\" title=\"My Promo Page\">Bilous Vitalii</a>\n"
-"                        in practical\n"
+"\"_blank\" title=\"My Promo Page\">Vitalii Bilous</a>\n"
+"                        , practical web development\n"
 "                        <a href=\"http://www.vitaliypodoba.com/books/django-"
 "for-beginners/\" target=\"_blank\" >course</a>\n"
-"                        from\n"
+"                        with Python/Django from\n"
 "                        <a href=\"http://www.vitaliypodoba.com/\" target="
 "\"_blank\">Vitalii Podoba </a>\n"
 "                    "
